tests/errors/python/dan-build.py
from dan import include

include('import_error')
